# advent-of-code

day01/: problem.txt
day01/haskell/: CHANGELOG.md  LICENSE  historian-hysteria.cabal
day01/haskell/app/: Main.hs
day02/haskell/red-nosed-reports/: CHANGELOG.md  red-nosed-reports.cabal
day02/haskell/red-nosed-reports/app/: Main.hs
day10/python/app/: hello.py  pyproject.toml
day15/python/app/: main.py  part1-input.txt
