cabal-version:      3.0
name:               red-nosed-reports
version:            0.1.0.0
synopsis:           Advent of Code day 2 solution
-- description:
license:            MIT
license-file:       LICENSE
author:             hholb
maintainer:         hholbroo@unca.edu
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable red-nosed-reports
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.18.2.1,
        directory
    hs-source-dirs:   app
    default-language: GHC2021
